# fashionbot

./: .gitignore  LICENSE  README.md  claw-flowcharts.mermaid  inter-claw-messaging.mermaid  pyproject.toml  watchlist.json  watchlist.md
blockdiagrams/: pipeline-flow.mermaid
docs/: BROWSER_BACKENDS.md  CHECKOUT_PROFILE.md  FILE_STRUCTURE.md  SCRAPING_APPROACH.md  SITE_CHECKING_STRATEGY.md  TECHNICAL_PRD.md
fashion-resale-claws/: DEMO-WALKTHROUGH.md  README.md  SPRINT-PLAN.md
fashion-resale-claws/diagrams/: claw-flowcharts.html  (+2 more)
fashionbot/: README.md  __init__.py  __main__.py  checker.py  checkout_profile.example.json  classifiers.py  cli.py  config.py  dashboard.py  markdown.py  models.py  mvp-plan-dashboard.html  pyproject.toml  reporting.py  storage.py  watchlist.json
fashionbot/.github/workflows/: dashboard.yml
fashionbot/diagrams/: system-architecture.mermaid
fashionbot/docs/: PRODUCT_PRD.md  SCRAPING_APPROACH.md  TECHNICAL_PRD.md
fashionbot/fashionbot/: __init__.py  checker.py  classifiers.py  markdown.py  storage.py
fashionbot/fashionbot/sites/: __init__.py  lego.py
fashionbot/maritime/workspace-files/communication-claw/: AGENTS.md
fashionbot/maritime/workspace-files/research-claw/: AGENTS.md
fashionbot/maritime/workspace-files/scraper-claw/: AGENTS.md  SOUL.md
fashionbot/sites/: coach.py  generic.py  topologie.py
fashionbot/tests/: test_classifiers.py  test_markdown.py
fashionbot/tests/fixtures/: available.html  blocked.html  sold_out.html
tests/: test_classifiers.py  test_dashboard.py  test_markdown.py  test_storage.py
(+5 files in other folders)
