[project]
name = "fashionbot"
version = "0.1.0"
description = "Local fashion availability checker outline."
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["fashionbot*"]
